some fixes added, but still result showing problem, and no stats are showing